--- a/src/app/sections/personal-info/personal-info.component.html
+++ b/src/app/sections/personal-info/personal-info.component.html
@@ -15,7 +15,7 @@
     <h2>CONTACT</h2>
     <hr />
     <p>Porto - Portugal</p>
-    <p>fnoratol@gmail.com</p>
-    <p>+351 911 767 697</p>
+    <p><a href="mailto:fnoratol@gmail.com">fnoratol@gmail.com</a></p>
+    <p><a href="http://wa.me/351911767697">+351 911 767 697</a></p>
   </div>
 </div>
