--- a/src/app/sections/personal-info/personal-info.component.html
+++ b/src/app/sections/personal-info/personal-info.component.html
@@ -14,8 +14,23 @@
   <div class="personal-info__contact">
     <h2>CONTACT</h2>
     <hr />
-    <p>Porto - Portugal</p>
-    <p><a href="mailto:fnoratol@gmail.com">fnoratol@gmail.com</a></p>
-    <p><a href="http://wa.me/351911767697">+351 911 767 697</a></p>
+    <div class="personal-info__contact--infos">
+      <p class="personal-info__contact--info">
+        <em class="personal-info__contact--icon fa-solid fa-location-pin"></em>
+        Porto - Portugal
+      </p>
+      <p class="personal-info__contact--info">
+        <em class="personal-info__contact--icon fa-solid fa-envelope"></em>
+        <a href="mailto:fnoratol@gmail.com">fnoratol@gmail.com</a>
+      </p>
+      <p class="personal-info__contact--info">
+        <em class="personal-info__contact--icon fa-solid fa-phone"></em>
+        <a href="http://wa.me/351911767697">+351 911 767 697</a>
+      </p>
+      <p class="personal-info__contact--info">
+        <em class="personal-info__contact--icon fa-brands fa-github"></em>
+        <a href="https://github.com/norato">https://github.com/norato</a>
+      </p>
+    </div>
   </div>
 </div>
