--- a/src/app/sections/personal-info/personal-info.component.html
+++ b/src/app/sections/personal-info/personal-info.component.html
@@ -33,4 +33,17 @@
       </p>
     </div>
   </div>
+  <hr />
+
+  <div class="personal-info-cover">
+    <p>
+      I am an Angular Specialist that loves creating beautifully written, highly
+      performant, and efficient software. Through my 7+ years of experience, I
+      have been working in many kinds of fields. That gave me a lot of knowledge
+      on clear code, great communication skills and most importantly I gained
+      sponge to like learning abilities. I have a passion for software testing
+      and automatization, front end architecture, and design systems.
+    </p>
+  </div>
+  <app-skills></app-skills>
 </div>
