--- a/src/app/sections/experiences/experience/experience.component.html
+++ b/src/app/sections/experiences/experience/experience.component.html
@@ -1,5 +1,5 @@
 <div class="experience">
-  {{ location }}
+  <p>{{ location }}</p>
   <div class="experience--company">
     <img
       class="experience--company__logo"
