--- a/src/app/sections/personal-info/personal-info.component.html
+++ b/src/app/sections/personal-info/personal-info.component.html
@@ -35,8 +35,8 @@
   </div>
   <hr />
 
-  <div class="personal-info-cover">
-    <p>
+  <div class="personal-info__cover">
+    <p class="personal-info__cover--description">
       I am an Angular Specialist that loves creating beautifully written, highly
       performant, and efficient software. Through my 7+ years of experience, I
       have been working in many kinds of fields. That gave me a lot of knowledge
