--- a/src/app/sections/personal-info/skills/skills.component.html
+++ b/src/app/sections/personal-info/skills/skills.component.html
@@ -3,19 +3,21 @@
   <hr />
   <div>
     <p>Professional</p>
-    <ul>
+    <ul class="skills__list">
       <li *ngFor="let skill of professional">{{ skill }}</li>
     </ul>
     <p>Social</p>
-    <ul>
+    <ul class="skills__list">
       <li *ngFor="let skill of social">{{ skill }}</li>
     </ul>
   </div>
-  <p>
-    Enjoy learning new technologies and libraries like NgRx and Schematics, and,
-    as possible as well, contribute to them. Interested in creating tools to
-    make the team deliver fast. I like to write tech articles and video
-    tutorials on my
-    <a [href]="youtubeUrl">Youtube Channel (pt-br)</a>.
-  </p>
+  <div class="skills__cover">
+    <p class="skills__cover--description">
+      Enjoy learning new technologies and libraries like NgRx and Schematics,
+      and, as possible as well, contribute to them. Interested in creating tools
+      to make the team deliver fast. I like to write tech articles and video
+      tutorials on my
+      <a [href]="youtubeUrl">Youtube Channel (pt-br)</a>.
+    </p>
+  </div>
 </div>
