--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,18 @@
 .container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   width: 90%;
   margin: 0 auto;
+}
+
+@media (min-width: 480px) {
+  .container {
+    flex-direction: row;
+    gap: 15px;
+  }
+  app-personal-info,
+  app-experiences {
+    width: 50%;
+  }
+
 }
