--- a/src/app/sections/experiences/experiences.component.html
+++ b/src/app/sections/experiences/experiences.component.html
@@ -1,5 +1,5 @@
 <div class="experiences">
-  <h2>CONTACT</h2>
+  <h2>EXPERIENCES</h2>
 
   <ng-container *ngFor="let experience of experiences">
     <hr />
