--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container">
-  <app-personal-info></app-personal-info>
-  <app-experiences></app-experiences>
+  <div class="row">
+    <app-personal-info class="left"></app-personal-info>
+    <app-contact class="right"></app-contact>
+  </div>
+  <div></div>
+  <!-- <app-experiences></app-experiences> -->
 </div>
