--- a/src/app/sections/personal-info/personal-info.component.html
+++ b/src/app/sections/personal-info/personal-info.component.html
@@ -1,49 +1,25 @@
 <div class="personal-info">
   <div class="personal-info__me">
-    <h1>Felipe Norato</h1>
-    <p>Angular Front End Engineer</p>
     <img
       class="personal-info__avatar"
       ngSrc="assets/avatar.jpeg"
       alt="felipe-norato-avatar"
-      width="200"
-      height="250"
+      width="150"
+      height="185"
       priority
     />
-  </div>
-  <div class="personal-info__contact">
-    <h2>CONTACT</h2>
-    <hr />
-    <div class="personal-info__contact--infos">
-      <p class="personal-info__contact--info">
-        <em class="personal-info__contact--icon fa-solid fa-location-pin"></em>
-        Porto - Portugal
-      </p>
-      <p class="personal-info__contact--info">
-        <em class="personal-info__contact--icon fa-solid fa-envelope"></em>
-        <a href="mailto:fnoratol@gmail.com">fnoratol@gmail.com</a>
-      </p>
-      <p class="personal-info__contact--info">
-        <em class="personal-info__contact--icon fa-solid fa-phone"></em>
-        <a href="http://wa.me/351911767697">+351 911 767 697</a>
-      </p>
-      <p class="personal-info__contact--info">
-        <em class="personal-info__contact--icon fa-brands fa-github"></em>
-        <a href="https://github.com/norato">https://github.com/norato</a>
+    <div class="personal-info__infos">
+      <h1 class="personal-info__infos--name">Felipe Norato</h1>
+      <p class="personal-info__infos--role">Angular Front End Engineer</p>
+      <p class="personal-info__infos--description">
+        I am an Angular Specialist that loves creating beautifully written,
+        highly performant, and efficient software. Through my 7+ years of
+        experience, I have been working in many kinds of fields. That gave me a
+        lot of knowledge on clear code, great communication skills and most
+        importantly I gained sponge to like learning abilities. I have a passion
+        for software testing and automatization, front end architecture, and
+        design systems.
       </p>
     </div>
   </div>
-  <hr />
-
-  <div class="personal-info__cover">
-    <p class="personal-info__cover--description">
-      I am an Angular Specialist that loves creating beautifully written, highly
-      performant, and efficient software. Through my 7+ years of experience, I
-      have been working in many kinds of fields. That gave me a lot of knowledge
-      on clear code, great communication skills and most importantly I gained
-      sponge to like learning abilities. I have a passion for software testing
-      and automatization, front end architecture, and design systems.
-    </p>
-  </div>
-  <app-skills></app-skills>
 </div>
