--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
     <app-personal-info class="left"></app-personal-info>
     <app-contact class="right"></app-contact>
   </div>
-  <div></div>
-  <!-- <app-experiences></app-experiences> -->
+  <div class="row">
+    <app-experiences class="left"></app-experiences>
+    <div class="right"></div>
+    <!-- <app-skills class="right"></app-skills> -->
+  </div>
 </div>
