--- a/src/app/sections/contact/contact.component.html
+++ b/src/app/sections/contact/contact.component.html
@@ -14,7 +14,7 @@
     </p>
     <p class="contact__info">
       <em class="contact__info--icon fa-brands fa-github"></em>
-      <a href="https://github.com/norato">https://github.com/norato</a>
+      <a href="https://github.com/norato">github.com/norato</a>
     </p>
   </div>
 </div>
