--- a/src/app/sections/contact/contact.component.scss
+++ b/src/app/sections/contact/contact.component.scss
@@ -1,8 +1,10 @@
+:host {
+  display: block;
+}
 .contact {
-  background: #2d343d;
-  color: #ffffff;
+  width: 100%;
   padding: 8px;
-  border-radius: 8px;
+  color: #ffffff;
   a {
     color: #ffffff;
   }
@@ -11,7 +13,13 @@
       display: flex;
       align-items: center;
       .contact__info--icon {
-        width: 30px;
+        width: auto;
+        min-width: 16px;
+        background: #fff;
+        padding: 8px 6px;
+        color: #000;
+        border-radius: 8px;
+        margin-right: 12px;
       }
     }
   }
