--- a/src/app/sections/personal-info/personal-info.component.html
+++ b/src/app/sections/personal-info/personal-info.component.html
@@ -5,21 +5,13 @@
       ngSrc="assets/avatar.jpeg"
       alt="felipe-norato-avatar"
       width="150"
-      height="185"
+      height="150"
       priority
     />
     <div class="personal-info__infos">
       <h1 class="personal-info__infos--name">Felipe Norato</h1>
       <p class="personal-info__infos--role">Angular Front End Engineer</p>
-      <p class="personal-info__infos--description">
-        I am an Angular Specialist that loves creating beautifully written,
-        highly performant, and efficient software. Through my 7+ years of
-        experience, I have been working in many kinds of fields. That gave me a
-        lot of knowledge on clear code, great communication skills and most
-        importantly I gained sponge to like learning abilities. I have a passion
-        for software testing and automatization, front end architecture, and
-        design systems.
-      </p>
+      <p class="personal-info__infos--description">{{ description }}</p>
     </div>
   </div>
 </div>
