--- a/src/app/sections/personal-info/personal-info.component.scss
+++ b/src/app/sections/personal-info/personal-info.component.scss
@@ -11,11 +11,21 @@
     align-items: center;
   }
 
+  .personal-info__infos--name {
+    margin-bottom: 0;
+    font-size: 3em;
+  }
+  .personal-info__infos--role {
+    margin-top: 4px;
+    margin-bottom: 8px;
+    font-size: 2em;
+  }
+
   .personal-info__avatar {
   }
 
   .personal-info__infos--description {
     text-align: justify;
+    font-size: 1.2em;
   }
 }
-
