--- a/src/app/sections/experiences/experience/experience.component.html
+++ b/src/app/sections/experiences/experience/experience.component.html
@@ -1,24 +1,20 @@
 <div class="experience">
-  <p>{{ location }}</p>
-  <div class="experience__company">
-    <img
-      class="experience__company--logo"
-      [ngSrc]="logo"
-      [alt]="companyName"
-      width="100"
-      height="100"
-      priority
-    />
-    <div class="experience__company--info">
+  <div class="experience__infos">
+    <div class="experience__infos--company">
+      <img
+        class="experience__company--logo"
+        [ngSrc]="logo"
+        [alt]="companyName"
+        width="30"
+        height="30"
+        priority
+      />
       <p>{{ companyName }}</p>
-      <p>{{ period }}</p>
-      <p>{{ role }}</p>
     </div>
+    <p>as</p>
+    <p class="experience__infos--role">{{ role }}</p>
+    <p class="experience__infos--period">{{ period }}</p>
   </div>
-  <div class="experience__description">
-    <p>{{ description }}</p>
-  </div>
-  <div class="experience__stack">
-    <p>{{ stack }}</p>
-  </div>
+  <p class="experience__description">{{ description }}</p>
+  <p class="experience__stack">{{ stack }}</p>
 </div>
