--- a/src/app/sections/experiences/experience/experience.component.scss
+++ b/src/app/sections/experiences/experience/experience.component.scss
@@ -5,18 +5,34 @@
 .experience {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
 }
 
-.experience .experience__company {
+.experience .experience__infos {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
+  align-items: center;
+  gap: 8px;
 
+  .experience__infos--role {
+    font-size: 20px;
+    margin: 0;
+  }
+  .experience__infos--company {
+    font-size: 18px;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+  }
+  .experience__infos--period {
+    margin: 0;
+    font-style: italic;
+    text-align: right;
+    flex-grow: 1;
+  }
+}
 
 .experience .experience__description {
   text-align: justify;
+  margin-top: 0px;
 }
