--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,6 @@
   </div>
   <div class="row">
     <app-experiences class="left"></app-experiences>
-    <div class="right"></div>
-    <!-- <app-skills class="right"></app-skills> -->
+    <app-skills class="right"></app-skills>
   </div>
 </div>
