--- a/src/app/sections/contact/contact.component.html
+++ b/src/app/sections/contact/contact.component.html
@@ -1,20 +1,28 @@
 <div class="contact">
   <div class="contact__infos">
     <p class="contact__info">
-      <em class="contact__info--icon fa-solid fa-location-pin"></em>
-      Porto - Portugal
+      <span class="contact__info--icon">
+        <em class="fa-solid fa-location-pin"></em>
+      </span>
+      Porto - Portugal (GMT)
     </p>
     <p class="contact__info">
-      <em class="contact__info--icon fa-solid fa-envelope"></em>
-      <a href="mailto:fnoratol@gmail.com">fnoratol@gmail.com</a>
+      <span class="contact__info--icon">
+        <em class="fa-solid fa-envelope"></em>
+      </span>
+      <a target="_blank" href="mailto:fnoratol@gmail.com">fnoratol@gmail.com</a>
     </p>
     <p class="contact__info">
-      <em class="contact__info--icon fa-solid fa-phone"></em>
-      <a href="http://wa.me/351911767697">+351 911 767 697</a>
+      <span class="contact__info--icon">
+        <em class="fa-solid fa-phone"></em>
+      </span>
+      <a target="_blank" href="http://wa.me/351911767697">+351 911 767 697</a>
     </p>
     <p class="contact__info">
-      <em class="contact__info--icon fa-brands fa-github"></em>
-      <a href="https://github.com/norato">github.com/norato</a>
+      <span class="contact__info--icon">
+        <em class="fa-brands fa-github"></em>
+      </span>
+      <a target="_blank" href="https://github.com/norato">github.com/norato</a>
     </p>
   </div>
 </div>
