--- a/src/app/sections/contact/contact.component.html
+++ b/src/app/sections/contact/contact.component.html
@@ -1,28 +1,38 @@
 <div class="contact">
   <div class="contact__infos">
-    <p class="contact__info">
+    <div class="contact__info">
       <span class="contact__info--icon">
         <em class="fa-solid fa-location-pin"></em>
       </span>
-      Porto - Portugal (GMT)
-    </p>
-    <p class="contact__info">
+      <p>Porto - Portugal (GMT)</p>
+    </div>
+    <div class="contact__info">
       <span class="contact__info--icon">
         <em class="fa-solid fa-envelope"></em>
       </span>
-      <a target="_blank" href="mailto:fnoratol@gmail.com">fnoratol@gmail.com</a>
-    </p>
-    <p class="contact__info">
+      <p>
+        <a target="_blank" href="mailto:fnoratol@gmail.com"
+          >fnoratol@gmail.com</a
+        >
+      </p>
+    </div>
+    <div class="contact__info">
       <span class="contact__info--icon">
         <em class="fa-solid fa-phone"></em>
       </span>
-      <a target="_blank" href="http://wa.me/351911767697">+351 911 767 697</a>
-    </p>
-    <p class="contact__info">
+      <p>
+        <a target="_blank" href="http://wa.me/351911767697">+351 911 767 697</a>
+      </p>
+    </div>
+    <div class="contact__info">
       <span class="contact__info--icon">
         <em class="fa-brands fa-github"></em>
       </span>
-      <a target="_blank" href="https://github.com/norato">github.com/norato</a>
-    </p>
+      <p>
+        <a target="_blank" href="https://github.com/norato"
+          >github.com/norato</a
+        >
+      </p>
+    </div>
   </div>
 </div>
