--- a/src/app/sections/experiences/experiences.component.html
+++ b/src/app/sections/experiences/experiences.component.html
@@ -1,8 +1,7 @@
 <div class="experiences">
-  <h2>EXPERIENCES</h2>
+  <h2>WORK EXPERIENCES</h2>
 
   <ng-container *ngFor="let experience of experiences">
-    <hr />
     <app-experience
       [location]="experience.location"
       [companyName]="experience.companyName"
