--- a/src/app/sections/experiences/experience/experience.component.scss
+++ b/src/app/sections/experiences/experience/experience.component.scss
@@ -14,6 +14,7 @@
 
   .experience__infos--role {
     font-size: 20px;
+    font-weight: bold;
     margin: 0;
   }
   .experience__infos--company {
