--- a/src/app/sections/personal-info/personal-info.component.scss
+++ b/src/app/sections/personal-info/personal-info.component.scss
@@ -16,8 +16,8 @@
     font-size: 3em;
   }
   .personal-info__infos--role {
-    margin-top: 4px;
-    margin-bottom: 8px;
+    margin-top: 0;
+    margin-bottom: 0;
     font-size: 2em;
   }
 
