--- a/src/app/sections/personal-info/personal-info.component.html
+++ b/src/app/sections/personal-info/personal-info.component.html
@@ -10,7 +10,7 @@
     />
     <div class="personal-info__infos">
       <h1 class="personal-info__infos--name">Felipe Norato</h1>
-      <p class="personal-info__infos--role">Angular Specialist</p>
+      <p class="personal-info__infos--role">Senior Frontend Engineer</p>
       <p class="personal-info__infos--description">{{ description }}</p>
     </div>
   </div>
